@@ -44,7 +44,7 @@ sub get_sql_index
 {
 	my( $self ) = @_;
 
-	return undef;
+	return ();
 }
 
 sub render_value
